// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      top
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      bottom
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      left
    </span>
  </div>
  <div
    class="mb-12"
  >
    <span
      class="cursor-pointer"
    >
      right
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > CloseDelay 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    3000 ms close delay
  </span>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    hover me
  </span>
</div>
`;

exports[`Story Snapshots > Delay 1`] = `
<div>
  <span
    class="cursor-pointer"
  >
    1000 ms delay
  </span>
</div>
`;
